--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script language="javascript">alert(' The password:  LinkedIn');  </script>
+<script language="javascript">alert(' The download password is: LinkedIn');  </script>
 
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
